brat/test/golden/error/vectorise1.brat
bad1(n :: #) -> Vec(Nat, n), Vec(Float, n)
bad1(n) = (n of (1, 2.0)), (n of 3)
